--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "lodash-webpack-plugin": "^0.11.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-markdown": "^3.3.0",
+    "remark-parse": "^5.0.0"
   },
   "keywords": [
     "gatsby"
