--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash-webpack-plugin": "^0.11.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.0",
     "react-markdown": "^3.3.0",
     "remark-parse": "^5.0.0",
