--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-transformer-sharp": "^1.6.21",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
+    "moment": "^2.22.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-google-maps": "^9.4.5",
