--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -38,25 +38,10 @@ collections:
           - {label: Hero, name: hero, widget: object, fields: [{label: Left, name: left, widget: object, fields: [{label: Text, name: text, widget: markdown}, {label: CTA, name: cta, widget: string}, {label: Link, name: link, widget: relation, collection: pages, searchFields: ['path', 'title'], valueField: 'path'}]},{label: Right, name: right, widget: object, fields: [{label: Text, name: text, widget: markdown}, {label: CTA, name: cta, widget: string}, {label: Link, name: link, widget: relation, collection: pages, searchFields: ['path', 'title'], valueField: 'path'}]}]}
           - {label: Image, name: image, widget: image}
           - {label: Heading, name: heading, widget: string}
+          - {label: Subheading, name: subheading, widget: string}
           - {label: Description, name: description, widget: string}
-          - {label: Intro, name: intro, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: text}]}]}
+          - {label: Intro, name: intro, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Subheading, name: subheading, widget: string}, {label: Description, name: description, widget: text}, {label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Heading, name: heading, widget: text}, {label: Description, name: description, widget: text}]}]}
           - {label: StartDates, name: startdates, widget: list, fields: [{label: 'Start Date', name: startsAt, widget: date}, {label: 'End Date', name: endsAt, widget: date}, {label: "Full", name: "full", widget: "boolean", default: false}]}
           - {label: CourseInfo, name: courseinfo, widget: list, fields: [{label: Heading, name: heading, widget: string}, {label: Subheading, name: subheading, widget: string}, {label: Description, name: description, widget: markdown}]}
           - {label: JobInfo, name: jobinfo, widget: list, fields: [{label: Heading, name: heading, widget: string}, {label: Subheading, name: subheading, widget: string}, {label: Description, name: description, widget: markdown}]}
-
-      - file: "src/pages/program/index.md"
-        label: "Program Page"
-        name: "program"
-        fields:
-          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "product-page"}
-          - {label: Title, name: title, widget: string}
-          - {label: Hero, name: hero, widget: object, fields: [{label: Left, name: left, widget: object, fields: [{label: Text, name: text, widget: markdown}, {label: CTA, name: cta, widget: string}, {label: Link, name: link, widget: relation, collection: pages, searchFields: ['path', 'title'], valueField: 'path'}]},{label: Right, name: right, widget: object, fields: [{label: Text, name: text, widget: markdown}, {label: CTA, name: cta, widget: string}, {label: Link, name: link, widget: relation, collection: pages, searchFields: ['path', 'title'], valueField: 'path'}]}]}
-          - {label: Image, name: image, widget: image}
-          - {label: Heading, name: heading, widget: string}
-          - {label: Subheading, name: subheading, widget: string}
-          - {label: Description, name: description, widget: string}
-          - {label: Intro, name: intro, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: CTA, name: cta, widget: string}, {label: Link, name: link, widget: relation, collection: pages, searchFields: ['path', 'title'], valueField: 'path'}, {label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Title, name: title, widget: text}, {label: Text, name: text, widget: text}]}]}
-          - {label: Main, name: main, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Image1, name: image1, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}, {label: Image2, name: image2, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}, {label: Image3, name: image3, widget: object, fields: [{label: Image, name: image, widget: image}, {label: Alt, name: alt, widget: string}]}]}
-          - {label: Testimonials, name: testimonials, widget: list, fields: [{label: Quote, name: quote, widget: string}, {label: Author, name: author, widget: string}]}
-          - {label: Full_image, name: full_image, widget: image}
-          - {label: Pricing, name: pricing, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: string}, {label: Plans, name: plans, widget: list, fields: [{label: Plan, name: plan, widget: string}, {label: Price, name: price, widget: string}, {label: Description, name: description, widget: string}, {label: Items, name: items, widget: list}]}]}
+          - {label: Program, name: program, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Heading, name: heading, widget: text}, {label: Description, name: description, widget: text}]}]}
